# scope-youtube

./: .gitignore  README.md  pyproject.toml
assets/icons/: preview.html
examples/: youtube-passthrough.scope-workflow.json
src/scope_youtube/: __init__.py  plugin.py  source.py
