[project]
name = "scope-youtube"
version = "0.1.0"
description = "YouTube video input source plugin for Daydream Scope"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.10.0",
]

[project.entry-points.scope]
scope_youtube = "scope_youtube.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_youtube"]
