[project]
name = "scope-youtube"
version = "0.1.0"
description = "YouTube input source for Daydream Scope — paste a YouTube URL and play it back as a video input."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "yt-dlp>=2024.10.0",
]

[project.entry-points.scope]
scope_youtube = "scope_youtube:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_youtube"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
